package eapli.aisafe.aircraftmodel.domain;

/**
 * Enum: aircraft operational type.
 * US055.
 */
public enum AircraftType {
    PASSENGER,
    CARGO,
    MIXED
}
