@startuml enginemodel_aggregate
left to right direction
skinparam packageStyle rectangle
skinparam nodesep 40
skinparam ranksep 60
hide empty members

package "Manufacturer_Aggregate" <<aggregate>> {
  class Manufacturer <<entity>> <<root>> {
    country : String
  }
  class ManufacturerName <<value object>> {
    name : String
  }
  note right of ManufacturerName : Identity (primary key). Trimmed, non-blank.
  Manufacturer *-- ManufacturerName : identifiedBy
}

package "EngineModel_Aggregate" <<aggregate>> {
  class EngineModel <<entity>> <<root>> {
    fuelType : String
  }
  class EngineModelCode <<value object>> {
    code : String
  }
  note right of EngineModelCode : Identity (@EmbeddedId).\nUnique code for the engine model.
  class EngineName <<value object>> {
    name : String
  }
  note right of EngineName : Human-readable name.\nname + manufacturer must be unique (US056).
  class Power <<value object>> {
    value : double
    unit : String
  }
  class Thrust <<value object>> {
    value : double
    unit : String
    speedReference : String
  }
  note right of Thrust : Manufacturer-supplied at\nstatic and cruise speed.\nDecreases with altitude (sec. 3.3)
  class TSFC <<value object>> {
    value : double
    unit : String
  }
  enum MotorizationType {
    TURBOPROP
    TURBOFAN
    TURBOJET
    RAMJET
    ELECTRIC_PROPELLER
  }
  EngineModel *-- EngineModelCode : identifiedBy
  EngineModel *-- EngineName : namedAs
  EngineModel --> MotorizationType : ofType
  EngineModel *-- Power : ratedAt
  EngineModel *-- "2" Thrust : characterisedBy
  EngineModel *-- TSFC : ratedBy

}

package "AircraftModel_Aggregate" <<aggregate>> {
  class AircraftModel <<entity>> <<root>> {
    designerName : String
    maxPassengerCapacity : int
  }
  class AircraftModelCode <<value object>> {
    code : String
  }
  note right of AircraftModelCode : unique in system (US055)
  enum AircraftType {
    passenger
    cargo
    mixed
  }
  class AircraftWeights <<value object>> {
    emptyWeight : double
    MTOW : double
    MZFW : double
    maxFuelCapacity : double
  }
  note right of AircraftWeights : Invariant:\nMTOW > MZFW > emptyWeight\nAll values positive (sec. 3.2)
  class AircraftPerformance <<value object>> {
    serviceCeiling : double
    cruiseSpeed : double
    maximumRange : double
  }
  note right : Each value has its own unit\ndefined at implementation time

  class AerodynamicCoefficients <<value object>> {
    wingArea : double
    dragCoefficient : double
    liftCoefficient : double
  }
  note right of AerodynamicCoefficients : Used in lift/drag\nformulas (sec. 3.3)
  class AircraftVariant <<entity>> {
    engineModelCode : EngineModelCode
    motorizationType : MotorizationType
  }
  note right of AircraftVariant : US057: "combination of\nmodel and engine configuration"
  AircraftModel *--- AircraftModelCode : identifiedBy
  AircraftModel ---> AircraftType : ofType
  AircraftModel *--- AircraftWeights : weights
  AircraftModel *--- AircraftPerformance : performs
  AircraftModel *--- AerodynamicCoefficients : characterisedBy
  AircraftModel *--- AircraftVariant : comprises
}


EngineModel "*" --> "1" Manufacturer : manufacturedBy >
AircraftModel "*" --> "1..*" EngineModel : certifies >

@enduml
